--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "17.0.2",
     "react-iconly": "^2.2.4",
     "react-native": "0.66.3",
+    "react-native-code-push": "^7.0.4",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-country-flag": "^1.1.4",
     "react-native-device-info": "^8.4.8",
