--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@ui-kitten/components": "^5.1.1",
+    "appcenter": "4.4.3",
+    "appcenter-analytics": "4.4.3",
+    "appcenter-crashes": "4.4.3",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
