--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "pushAndroidProd":"appcenter codepush release-react -a Afrirpayadmin/Afrirpay -d Production",
     "test": "jest",
     "lint": "eslint ."
   },
