--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "pushAndroidProd":"appcenter codepush release-react -a Afrirpayadmin/Afrirpay -d Production",
+    "pushAndroidProd": "appcenter codepush release-react -a Afrirpayadmin/Afrirpay -d Production",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -32,6 +32,7 @@
     "react-native-code-push": "^7.0.4",
     "react-native-confirmation-code-field": "^7.1.0",
     "react-native-country-flag": "^1.1.4",
+    "react-native-device-country": "^1.0.2",
     "react-native-device-info": "^8.4.8",
     "react-native-dotenv": "^3.3.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -43,6 +44,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-size-matters": "^0.4.0",
+    "react-native-snackbar": "^2.4.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^0.14.3",
